fixed testimonial slide spacing and alignment. closes #86

--- a/source/css/partials/_testimonial_slider.scss
+++ b/source/css/partials/_testimonial_slider.scss
@@ -50,8 +50,7 @@
     }
 
     blockquote {
-      float: left;
-      margin: 0;
+      margin: 0 auto;
       min-width: rem(214);
       @include calc(width, '100% - 106px');
       text-align: center;
